<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/day_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_blue_gradient"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/date_string"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date_text"
                    android:layout_marginStart="20dp"
                    android:text="@string/day_night_string"
                    android:id="@+id/day_night"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/day_night"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Clear sky"
                    android:id="@+id/weather_text"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/current_weather_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/current_weather_image_string"
                    android:scaleType="centerCrop"
                    android:src="@drawable/clear_day"
                    app:layout_collapseMode="parallax" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourly_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@null"
                android:orientation="horizontal" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/details_string"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/current_details_headers"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/details"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/humidity_string"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/dew_point_string"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/pressure_string"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/uv_index_string"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/wind_speed_string"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details"
                android:layout_toEndOf="@id/current_details_headers"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="51%"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dew_point_text"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="11°C"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pressure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="1014 hPa"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/uv_index_text"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wind_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="2.5 m/s"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/breaking_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/sunrise_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/sunrise_sunset_string"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/sunrise_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sunrise_sunset"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunrise_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sunrise_string"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunrise_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7:21"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sunrise_sunset"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunset_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sunset_string"
                    android:src="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20:21"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sunrise_layout"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="Length of the day "
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/day_length_text"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="16h i 34min"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/breaking_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/moon_phase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/moon_phase_string"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moon_phase_layout"
                android:layout_below="@id/moon_phase"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/moon_phase_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:src="@drawable/moon_waning_crescent"
                    android:contentDescription="@string/moon_phase_string" />

                <TextView
                    android:id="@+id/moon_phase_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Waning crescent"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moonrise_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moon_phase_layout"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/moonrise_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sunrise_string"
                    android:src="@drawable/moonrise" />

                <TextView
                    android:id="@+id/moonrise_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21:21"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moon_phase_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/moonset_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/sunset_string"
                    android:src="@drawable/moonset" />

                <TextView
                    android:id="@+id/moonset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3:13"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moonrise_layout"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="Length of the night "
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/night_length_text"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="5h i 52min"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/breaking_line" />

        <TextView
            android:id="@+id/text_scrolling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>